[feat] 발표전 코드 합치기 - 냉장고